--- a/config/settings-production.yml
+++ b/config/settings-production.yml
@@ -1,21 +1,21 @@
 # Changing this file necessitates a server restart
-name: "The Journal of Open Source Software"
-abbreviation: "JOSS"
+name: "JuliaCon Proceedings"
+abbreviation: "PJC"
 tagline: "a <strong>developer friendly</strong>, open access journal for research software packages."
 logo_url: "http://joss.theoj.org/logo_large.png"
-url: "http://joss.theoj.org"
-editor_email: "joss.theoj@gmail.com"
-noreply_email: "noreply@joss.theoj.org"
-twitter: "@JOSS_TheOJ"
-twitter_issn: "2475-9066"
-google_analytics: "UA-47852178-4"
-github: "openjournals/joss"
-reviews: "openjournals/joss-reviews"
-papers_html_url: "https://www.theoj.org/joss-papers"
+url: "http://pjc.theoj.org"
+editor_email: ""
+noreply_email: "noreply@pjc.theoj.org"
+twitter: ""
+twitter_issn: ""
+google_analytics: ""
+github: "arfon/juliacon-proceedings"
+reviews: "openjournals/pjc-reviews"
+papers_html_url: "https://www.theoj.org/pjc-papers"
 product: "software" # the *thing* being submitted for review
 reviewers: "https://bit.ly/joss-reviewers"
 submission_enquiry: |-
   **Project repository URL:** INSERT YOUR REPOSITORY LINK HERE
 
-  Briefly describe your software, its research application and any questions you have about the JOSS submission criteria.
+  Briefly describe your software, its research application and any questions you have about the PJC submission criteria.
 paper_types: []
