--- a/config/settings-production.yml
+++ b/config/settings-production.yml
@@ -1,7 +1,7 @@
 # Changing this file necessitates a server restart
 name: "JuliaCon Proceedings"
 abbreviation: "PJC"
-tagline: "proceedings for JuliaCon -- an open community conference."
+tagline: "JuliaCon -- an open community conference."
 logo_url: "https://juliacon.org/2019/assets/img/logo.svg"
 url: "http://pjc.theoj.org"
 editor_email: "vchuravy@mit.edu"
