--- a/config/settings-production.yml
+++ b/config/settings-production.yml
@@ -7,7 +7,7 @@ url: "http://pjc.theoj.org"
 editor_email: "vchuravy@mit.edu"
 noreply_email: "noreply@pjc.theoj.org"
 twitter: "JuliaConOrg"
-twitter_issn: ""
+twitter_issn: "2642-4029"
 google_analytics: ""
 github: "arfon/juliacon-proceedings"
 reviews: "JuliaCon/proceedings-review"
