--- a/config/repository.yml
+++ b/config/repository.yml
@@ -1,3 +1,3 @@
-openjournals/joss-reviews-testing:
-  editor_team_id: 2009411
-  papers: openjournals/joss-papers
+JuliaCon/proceedings-review:
+  editor_team_id: 3213896
+  papers: openjournals/pjc-papers
