--- a/config/settings-production.yml
+++ b/config/settings-production.yml
@@ -1,11 +1,11 @@
 # Changing this file necessitates a server restart
 name: "JuliaCon Proceedings"
-abbreviation: "jcon"
+abbreviation: "JuliaCon"
 tagline: "JuliaCon -- an open community conference."
 logo_url: "https://juliacon.org/2019/assets/img/logo.svg"
-url: "http://pjc.theoj.org"
-editor_email: "vchuravy@mit.edu"
-noreply_email: "noreply@pjc.theoj.org"
+url: "https://proceedings.juliacon.org"
+editor_email: "vchuravy@gmail.org"
+noreply_email: "juliacon@julialang.org"
 twitter: "JuliaConOrg"
 twitter_issn: "2642-4029"
 google_analytics: ""
